# order_flow

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/: crm_engine.py  database.py  main.py  models.py
backend/auth/: dependencies.py  router.py  schemas.py  utils.py
backend/routers/: crm.py  dashboard.py  orders.py  products.py  users.py
frontend/: tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminSidebar.tsx  Navbar.tsx  OrderDetailModal.tsx  ReminderPopover.tsx  StatCard.tsx  StatusBadge.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useAuth.ts  useCRM.ts  useDashboard.ts  useOrders.ts  useProducts.ts
frontend/src/layouts/: AdminLayout.tsx
frontend/src/lib/: api.config.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  NewOrder.tsx  OrderList.tsx  Profile.tsx  Register.tsx
frontend/src/pages/admin/: AdminHome.tsx  CustomerDetail.tsx  CustomerList.tsx  OrderAdmin.tsx  ProductAdmin.tsx  UserAdmin.tsx
frontend/src/services/: api.types.ts  auth.service.ts  crm.service.ts  crm.types.ts  dashboard.service.ts  orders.service.ts  products.service.ts  users.service.ts
frontend/static/: styles.css
frontend/templates/: base.html  login.html  register.html
scripts/: create_crm_tables.py  create_tables.py  export_orders_to_gsheet.py  reset_db.py  sync_sheets.py
